2003-04-16  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/gen_cc.py, Atlas/Objects/Entity/*.h,
	  Atlas/Objects/Entity/Entity.cc, Atlas/Objects/Operation/*.h,
	  Atlas/Objects/Operation/Operation.cc: Move virtual destructors
	  into implementation.

	* benchmark/Message_Move.cc, benchmark/Objects2_Move.cpp,
	  benchmark/Objects_Move.cc, benchmark/SmartPtr_Move.cc,
	  benchmark/Static_Move.cc: Clean up some includes.

2003-04-11  Al Riddoch  <alriddoch@zepler.org>

	* Rename src to Atlas for portability

2003-03-24  Al Riddoch  <alriddoch@zepler.org>

	* src/Objects/gen_cc.py, src/Objects/Entity/Account.h,
	  src/Objects/Entity/Player.h, src/Objects/Entity/RootEntity.h,
	  src/Objects/Operation/RootOperation.h: Don't send attributes
	  when they contain no meanigfull data.

2003-01-30  Al Riddoch  <alriddoch@zepler.org>

	* Added pkgconfig macro, and put installed headers into a subdir.

2003-01-09 James Turner <james@worldforge.org>

	* Added project files for Mac OS-X project builder. This produces
	  a framework called Atlas, whose's headers folder contains symlinks
	  so that standard Atlas include paths work correctly. If someone
	  knows how to make PB export headers into a subdirectory, please
	  inform me.

2002-07-20  Al Riddoch  <alriddoch@zepler.org>

	* Updated README, bumped up version number, and release 0.4.5.

2002-06-11  Al Riddoch  <alriddoch@zepler.org>

	* configure.in: Fix typos in configure.in

2002-06-10  Al Riddoch  <alriddoch@zepler.org>

	* Fixed rpm dependencies. I think the spec is now done.

2002-06-10  Al Riddoch  <alriddoch@zepler.org>

	* Fixes to rpm spec, and modify the way interface versioning is
	  set up, so it is handled more automaically, and used correctly.

2002-06-10  Al Riddoch  <alriddoch@zepler.org>

	* Add a new cleanly generated rpm spec, with devel subpackage,
	  and sort out install process so doc files get installed.

2002-05-21  Michael Koch  <konqueror@gmx.de>

	* configure.in: added --enable-debug.
	